css/style.css
/* MAIN CSS STYLING *************************/

* {
  box-sizing: border-box;
}

body {
  background: whitesmoke;
  color: black;
  margin: 0 auto;
  text-align: center;
}

.wrapper {
  width: 100%;
}

/* NAV CSS STYLING ************************/

.main-header {
  width: 100%;
}

.main-nav li {
  float: left;
  list-style: none;
  text-transform: uppercase;
  margin-right: auto;
  padding-right: 30px;
}

.main-nav {
  display: inline-block;
  border-bottom: 1px solid #b4b4b4;
  background: #e5e5e5;
  margin: 0 auto;
  border-radius: 3px;
  font-size: 1em;
}

.nav-list {
  padding-bottom: 10px;
  margin: 0 auto;
}

.nav-list+.nav-list::before {
  content: '|';
  padding-right: 10px;
  color: #b4b4b4;
}

a {
  text-decoration: none;
}

img {}

/* PRIMARY CONTENT STYLING */

.priamary-content {
  overflow: hidden;
  margin: 0 auto;
}

.second-content {
  padding-bottom: 15px;
}

.first-section,
.second-section {
  background: orange;
  margin: 0 auto;
  max-width: 870px;
}

.first-section {
  margin-top: 20px;
  height: 479px;
}

.second-section {
  background-color: tomato;
}

.offers {
  list-style-type: none;
  padding: 0;
  margin: 2em 0 1em;
}

.specials span,
.books span {
  text-transform: uppercase;
  font-weight: 500;
  color: #3b3a3a;
  font-size: 1em;
}

.specials,
.books {
  background-color: rgb(229, 229, 229);
  color: #4d4c4cef;
}

.specials {
  padding: 1em;
  border-radius: 0.2em;
  position: relative;
  float: left;
  width: 58%;
  height: 220px;
  max-width: 60%;
  max-height: 210px;
  overflow: auto;
}

.specials p {
  text-align: left;
  box-sizing: border-box;
  max-height: 200px;
}

.books {
  padding: 1em;
  border-radius: 0.2em;
  position: relative;
  float: right;
  width: 40%;
  max-width: 40%;
  height: 210px;
}

.search {
  width: 100%;
  margin: 5px;
  padding: 5px;
  font-size: .7em;
  text-transform: uppercase;
  color: #4d4c4cef;
}

.book-now {
  margin-top: 20px;
}

.book-now:hover {
  background-color: rgb(182, 178, 177);
  font-size: 80%;
}

.search-form {
  padding: 10.5px;
}

.contact {
  display: inline-block;
  max-width: 870px;
}

.info {
  float: left;
  padding: 15px 45px;
}

.contact h2 {
  margin: 3px;
  font-size: 1em;
  text-transform: uppercase;
  text-align: left;
  color: #4d4c4c;
}

.contact span {
  text-transform: uppercase;
  font-size: .8em;
  color: #636161;
}

hr {
  max-width: 870px;
}

.main-footer {
  color: #3b3a3a;
}

/* Float Clearfix ---------------------- */
.group:after {
  content: "";
  display: table;
  clear: both;
}

/* Special offers and packages -------- */

.specials_readmore {
  text-transform: uppercase;
  font-size: .8em;
  color: #727070;
  background: #eeecec;
  float: left;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
  padding: 5px 10px;
  border-radius: 3px;
  cursor: pointer;
}

.specials_readmore:hover {
  color: rgb(138, 135, 135);
  font-size: 90%;
}

/* Special.html: Deal styles --------- */

.deals {
  list-style-type: none;
  padding: 0;
  margin: 2em 0 1em;
  max-width: 870px;
  display: inline-block;
}

.deal-list {
  border-radius: .2em;
  width: 33.3%;
  height: 600px;
  float: left;
  overflow: hidden;
  max-height: 700px;
}

.deal-list h2 {
  padding: 10px;
  margin: 4px;
  text-transform: uppercase;
  font-size: 1.1em;
  color: #3b3a3a;
}

.deal-list img {
  max-width: 100%;
}

.deal-list p {
  overflow: auto;
  text-align: left;
  color: #3b3a3a;
}

.deal-list button {
  width: 100%;
  padding: 15px;
  text-transform: uppercase;
  font-size: bold;
  margin-top: 129px;
  cursor: pointer;
  background: transparent;
  position: relative;
  color: #3b3a3a;
}

.deal-list button:hover {
  color: darkgray;
}

/* inentory.html styles */

.inventory-filter-ul {
  background: #434242;
  width: 870px;
  display: inline-block;

}

.inventory-filter-ul li {
  display: inline-block;
  padding: 15px;
}

.search-inventory {
  width: 200px;
  text-transform: uppercase;
}

.inventory-li button {
  text-transform: uppercase;
}

/* inventory.html: search result styles */

.search-results {
  max-width: 870px;
  display: inline-block;
  margin: 0;
  padding: 0;
}

.results-list {
  list-style: none;
  display: inline-block;
  margin: 0 auto;
  padding: 0;
}

.results {
  float: left;
  padding: 5px;
  padding-bottom: 10px;
  width: 50%;
  color: #3b3a3a;
  border-bottom: .5px solid #bbb9b9;
  border-left: 1px solid #bbb9b9;
  border-right: 1px solid #bbb9b9;
  border-radius: 5px;
}

.results button {
  text-transform: uppercase;
  font-size: .8em;
  color: #666464;
  background: #eeecec;
  width: 50%;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
  padding: 5px 10px;
  border-radius: 3px;
  cursor: pointer;
}

.results button:hover {
  font-size: 85%;
}

.results img {
  width: 100%;
}

.results p {
  text-align: left;
  color: #666464
}

.results h3 {
  text-align: left;
  text-transform: uppercase;
  font-size: 16px;
}

.results h3 span {
  font-size: 13px;
}

/* Reservation.html: ----------------- */

.reservation-form {
  width: 870px;
  display: inline-block;
  background: #e5e5e5;
  font-family: 'Michroma', sans-serif;
}

.reservation-infos {
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
  padding: 2px;
}

.reservation-form h1,
h3,
label,
button {
  text-transform: uppercase;
  color: rgba(63, 62, 62, 0.993);
}

.reservation-form h1 {
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

.reservation-form h3 {
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;

  text-align: left;
  margin-bottom: 0;
}

.reservation-infos label {
  background: #dad8d8;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;

  display: inline-block;
  padding: 5px;
  margin: 5px;
  width: 30%;
  text-align: left;
}

.reservation-infos input {
  padding: 3px;
  width: 40%;

  background: #dddada;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

.reservation-infos textarea {
  padding: 3px;
  width: 71%;

  background: #dddada;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

.reservation-infos label {
  font-size: 10px;
}

.reservation-infos input {
  font-size: 13px;
}

.reservation-infos button:hover {
  font-size: 90%;
}

/* contact.html ---------------------- */

.contact-section {
  width: 870px;
  display: inline-block;
  box-sizing: border-box;
}

.contact-form {
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

.contact-field input,
label {
  width: 100%;
  padding: 10px 0;
  margin: 0 auto;
  text-transform: uppercase;
  font-family: 'Courier New', Courier, monospace;
  font-size: 15px;
  background: #dddada;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

.contact-field textarea {
  margin: 0 auto;
  width: 100%;
}

.contact-field button {
  width: 50%;
  padding: 5px;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

.contact-field button:hover {
  font-size: 90%;
  background: #c9c5c5;
}

.contact-section h1 {
  text-transform: uppercase;
  background: #eeeaea;
  padding: 10px;
  color: #504e4e;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

/* about.html ------------------------ */

.main-section {
  max-width: 870px;
  display: inline-block;
  padding: 10px;
  color: #3b3a3a;
}

.main-section article {
  text-align: left;
  padding: 10px;
}

.main-section h1 {
  text-transform: uppercase;
}

/* policies.html -------------------- */

.rules-section {
  max-width: 870px;
  display: inline-block;
  padding: 10px;
  color: #3b3a3a;
}

.rules-section article {
  text-align: left;
  padding: 10px;
}

.rules-section h1 {
  text-decoration: underline;
}

.rules-section h1,
h3 {
  text-transform: uppercase;
  margin-bottom: 0;
  font-family: 'Courier New', Courier, monospace;
}

.rules {
  color: #504e4e;
  border-bottom: 1px solid #bbb9b9;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
}

/* media queries styles ------------------------ */

@media (max-width: 575px) {
  * {
    width: 100%;
    padding: 0;
    margin: 0;
  }

  .main-nav {
    margin: 0;
  }

  .nav-list a {
    display: inline-block;
    padding: 5px 0;
    max-width: 575px;
    text-align: center;
    width: 375px;
  }

  .nav-list {
    border-bottom: 1px solid #bbb9b9;
    border-left: 1px solid #ececec;
    border-right: 1px solid #ececec;
    padding: 10px 0;
  }

  .nav-list:hover {
    border-bottom: 1px solid #bbb9b9;
  }

  .nav-list+.nav-list::before {
    content: none;
  }

  .first-section {
    margin: 0 auto;
    max-height: 300px;
  }

  .img {
    height: fit-content;
    max-height: 325px;
    overflow: auto;
  }

  .second-content {

    margin: 0 auto;
  }

  .second-section .offers .books {
    max-width: 100%;
    width: 100%;
  }

  .second-section .offers .specials {
    max-width: 100%;
    width: 100%;
    height: 100%;
  }

  .main-footer .contact h2 {
    display: inline;
  }

  .main-footer .contact span {
    float: right;
    display: block;
  }

  /* specials.html */

  .deal-list {
    max-width: 375px;
    width: fit-content;
    /* padding: 3px; */
    height: 100%;
    box-sizing: border-box;
    overflow: auto;
    margin-top: 20px;

    border-bottom: 1px solid #bbb9b9;
    border-left: 1px solid #ececec;
    border-right: 1px solid #ececec;
    padding: 10px 0;
  }

  /* inventory */

  .inventory-filter-ul {
    max-width: 375px;
  }

  .inventory-li,
  .search-inventory {
    max-width: 375px;
    width: 100%;
    text-align: center;
  }

  .results {
    max-width: 100%;
    width: 100%;
  }

  /* reservation */

  .reservation-form {
    max-width: 100%;
  }

  .reservation-infos {
    width: 100%;
    
  }

  .reservation-form h1 {
    margin: 15px 0;
  }

  .reservation-infos textarea {
    width: 100%;
  }

  .reservation-infos button {
    padding: 10px;
  }

  /* policies */

  .rules-section .rules {
    padding: 15px 0;
    max-width: 375px;
    width: 100%;
    height: auto;
    margin: 0 auto;
    box-sizing: border-box;
    
  }

  .contact-section {
    max-width: 100%;
  }

  .contact-field button {
    width: 100%;
    padding: 10px;
    
  }

}

@media (min-width: 576px) and (max-width: 768px) {

  .main-nav {
    width: 100%;
  }

  .nav-list {
    font-size: 14px;
  }

  .nav-list a {}

  .img {
    width: fit-content;
    padding: 0;
  }

  .nav-list+.nav-list::before {
    content: none;
  }

  .main-footer .contact h2 {
    display: inline;
    padding: 0;
  }

  .main-footer .info {
    float: right;
    display: block;
    border-bottom: 1px solid #bbb9b9;
    border-left: 1.5px solid #ececec;
    border-right: 1.5px solid #ececec;
    padding: 5px 0;

  }

  .contact-section {
    max-width: 100%;
  }

  .contact-field button {
    width: 100%;
    padding: 10px;
    
  }
}

